2008-07-31  Maynard Johnson <maynardj@us.ibm.com>

	* configure.in: Fix to allow libtool to recognize
	  alternate binutils dir passed via --with-binutils

2008-07-24  Jean Pihet <jpihet@mvista.com>

	* events/arm/armv7/events:
	* events/arm/armv7/unit_masks:
	* libop/op_cpu_type.c:
	* libop/op_cpu_type.h:
	* libop/op_events.c:
	* utils/ophelp.c: Added ARMv7 support to be consistent with the
	  kernel, added ARMv7 specific events.
	  Tested on OMAP3430 and OMAP3530 chipsets.

2008-07-17  Maynard Johnson  <maynardj@us.ibm.com>

	* configure.in: bump version in AM_INIT_AUTOMAKE to 0.9.4

2008-07-17  Will Cohen  <wcohen@redhat.com>

	* libop/op_alloc_counter.c: Assume perfmon managing PMU hw
	  when no counters

2008-07-07  Maynard Johnson  <maynardj@us.ibm.com>

	* HACKING: Ask contributors to include Signed-off-by
	  line with their patches

2008-07-03  Richard Purdie  <rpurdie@openedhand.com>

	* libutil++/bfd_support.cpp:
	* libutil++/bfd_support.h:
	* libutil++/op_bfd.cpp:
	* libutil++/op_bfd.h:
	* libutil++/op_spu_bfd.cpp:
	* pp/oparchive.cpp: Switch separate_debug_file_exists()
	  and hence find_separate_debug_file() to use
	  extra_images::find_image_path() so debug files in --root
	  directories are correctly found

2008-07-03  Maynard Johnson  <maynardj@us.ibm.com>

	* ChangeLog:  Correct date of previous entry
	* README_PACKAGERS: Add more advice to packagers
	  regarding the new JIT support libraries

2008-07-03  Maynard Johnson <maynardj@us.ibm.com>

	* libopagent/Makefile.am:
	* libopagent/opagent.c:
	* remove libopagent/bfddefines.c: Move code from bfddefines
	  to libopagent to fix cross-compile error

2008-06-30  Shunichi Fuji  <palglowr@gmail.com>

	* libpp/callgraph_container.cpp: Fix compile warning
	  using gcc 4.3.1 for uninitialized variable

2008-06-23  Maynard Johnson <maynardj@us.ibm.com>

	* daemon/opd_stats.c: Do not force printing of sample_invalid_eip
	  since this is not available from pre-2.6.24 kernels
